--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     color: #555b6e;
     font-family: "Space Grotesk", sans-serif;
     margin-left: 0;
+    margin-right: 0;
 }
 
 p {
@@ -228,7 +229,7 @@ header {
 
 
 .recipes-list-item img {
-    max-width:80%;
+    max-width:70%;
     border-radius: 50%;
 }
 
@@ -287,14 +288,17 @@ header {
     padding: 10px 30px;
     text-align: center;
     font-size: 130%;
-    background-color: rgba(239, 246, 224, 0.4);
-    color: #598392;
+    background-color: rgba(18, 69, 89, 0.8);
+    color: white;
     display: block;
 }
 
 #signupbutton:hover {
-    background-color: rgba(18, 69, 89, 0.5);
-    border-color: #eff6e0;
+    background-color: white;
+    border-color: #598392;
+    color:#598392;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
 }
 
 input[type="radio"] {
@@ -350,10 +354,11 @@ input[type="radio"] {
     max-width: 100%;
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: flex-start;
     position: relative;
     margin-bottom: 40px;
+  
 }
 
 #hyperlinks img {
@@ -378,6 +383,7 @@ footer {
 
 .icons {
     text-align: center;
+
 }
 
 .icons li {
@@ -387,11 +393,11 @@ footer {
 .icons i {
     font-size: 2rem;
     color: #3a3a3a;
+    padding-left:30px;
 }
 
 .icons i:hover {
     color: #598392;
-    font-size: 2.1rem;
 }
 
 /* Media queries */
@@ -478,7 +484,7 @@ footer {
         right: 0px;
         top: 50%;
         width: 50px;
-        background: rgba(18, 69, 89, 0.9);
+        background: rgba(18, 69, 89, 0.8);
         height: 200px;
         border-radius: 10px 0px 0px 10px;
         box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
@@ -503,44 +509,20 @@ footer {
 
    
 
-    /* BREAKFAST PAGE*/
+    /* BREAKFAST, LUNCH, DINNER PAGE*/
 
-    #breakfastrecipes {
-        text-align: justify;
-        width: 200%;
-    }
-
-    #breakfastrecipes h2,
-    #breakfastrecipes h3 {
+    .recipes-list-item {
+        flex-wrap: wrap;
         text-align: center;
+        margin:0 auto;
     }
 
-    .flexleft {
-        max-width: 90%;
+
+    .flexleft{
+        width:100%;
     }
 
-    /* LUNCH PAGE */
-    #lunchtrecipes {
-        text-align: justify;
-
-    }
-
-    #lunchrecipes h2,
-    #lunchrecipes h3 {
-        text-align: center;
-    }
-
-    /* Dinner PAGE */
-    #dinnerrecipes {
-        text-align: justify;
-
-    }
-
-    #dinnerrecipes h2,
-    #dinnerrecipes h3 {
-        text-align: center;
-    }
-
+    
     /* About Page */
     #flexabout {
         flex-wrap: wrap;
@@ -555,14 +537,14 @@ footer {
     }
 
     #aboutcontent {
-        width: 100%;
+        width: 90%;
         flex-wrap: wrap;
     }
 
     .aboutinfo {
         width: 90%;
         text-align: center;
-        margin-right: 10%;
+
  
     }
 
@@ -580,5 +562,9 @@ footer {
     #signupbutton {
         margin-top: 20px;
         margin-left: 28%;
+    }
+
+    #container{
+        margin-bottom:20px;
     }
 }
