--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ color:#598392;
 
 
 
-/* hero video and overlay text*/
+/* main video and overlay text*/
 #video-outer {
     max-width: 100%;
     max-height: 100%;
@@ -235,8 +235,6 @@ color:#598392;
 }
 
 
-
-
 .recipes-list-item img {
     max-width:70%;
     border-radius: 50%;
@@ -257,7 +255,8 @@ color:#598392;
 
 
 
-/* signuppage*/
+/* signuppage */
+
 #signuppage {
     background: url("../images/onion2.jpg") no-repeat center center fixed;
     min-height: 100%;
@@ -424,8 +423,16 @@ footer {
 
 /* Media queries */
 
+
+/* Mobile phone screens */
+
 @media screen and (max-width: 600px) and (min-width: 320px) {
+
+    p {
+        text-align: justify;
+    }
     
+/* header */
     #logo img {
         width: 20%;
         position: absolute;
@@ -443,45 +450,7 @@ footer {
 
 
     header {
-        margin-bottom: 10%;
-    }
-
-
-    #moftheday {
-        width: 80%;
-        max-width: 100%;
-        margin-left: 20px;
-    }
-
-    #breakfast {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    #lunch {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    #dinner {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    header {
         margin-bottom: 25%;
-    }
-
-    #explore h2{
-        display:none;
-    }
-
-    #hyperlinks {
-        display: none;
-    }
-
-    #hyperlinks h2 {
-        display: none;
     }
 
     .navbar {
@@ -519,6 +488,48 @@ footer {
         border-radius: 10px 0px 0px 10px ;
     }
 
+    /* menu of the day section */
+
+
+    #moftheday {
+        width: 80%;
+        max-width: 100%;
+        margin-left: 20px;
+    }
+
+    #breakfast {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #lunch {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #dinner {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+   
+
+/* hyperlinks explore section */
+
+    #explore h2{
+        display:none;
+    }
+
+    #hyperlinks {
+        display: none;
+    }
+
+    #hyperlinks h2 {
+        display: none;
+    }
+
+
+/* footer section */
     
     footer {
         position: fixed;
@@ -536,6 +547,7 @@ footer {
     footer hr {
         display:none;
     }
+
 .icons i{
     color: white;
     padding-bottom:10px;
@@ -614,6 +626,25 @@ footer {
 
 @media screen and (min-width: 600px) 
 and (max-width: 1024px) {
+
+    p {
+        text-align: justify;
+    }
+
+    h1 {
+        font-size: 2rem;
+            }
+        
+            h2 {
+                font-size:1.8rem;
+            }
+        
+            h3 {
+                font-size:1.5rem;
+            }
+
+/* header */
+
     #logo img {
         width: 20%;
         position: absolute;
@@ -622,54 +653,8 @@ and (max-width: 1024px) {
     }
 
     header {
-        margin-bottom: 10%;
-    }
-
-    h1 {
-font-size: 2rem;
-    }
-
-    h2 {
-        font-size:1.8rem;
-    }
-
-    h3 {
-        font-size:1.5rem;
-    }
-
-    #moftheday {
-        width: 80%;
-        max-width: 100%;
-        margin-left: 50px;
-    }
-
-
-    #breakfast {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    #lunch {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    #dinner {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    header {
         margin-bottom: 25%;
     }
-
-    #hyperlinks {
-       padding-bottom:50px;
-    }
-
-    
-
-    
 
     .navbar {
         display: flex;
@@ -711,6 +696,40 @@ font-size: 2rem;
         width:22%;
     }
 
+
+   /* menu of the day section */
+
+    #moftheday {
+        width: 80%;
+        max-width: 100%;
+        margin-left: 50px;
+    }
+
+
+    #breakfast {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #lunch {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #dinner {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+   
+    /* hyperlinks explore section */
+
+    #hyperlinks {
+       padding-bottom:50px;
+    }
+
+/* footer section */
+   
     footer {
         position: fixed;
         right: 0px;
@@ -727,6 +746,7 @@ font-size: 2rem;
     footer hr {
         display:none;
     }
+    
 .icons i{
     color: white;
     padding-bottom:10px;
