--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,20 +27,25 @@ h3 {
     font-family: "IBM Plex Sans", sans-serif;
     text-align: center;
     font-size: 1.5rem;
-    color:#598392
+    color: #598392;
 }
 
 hr {
     border-top: 1px solid #598392;
 }
 
-/* logo */
+/* header */
+
+
+header { 
+    display: flex;
+        padding: 0 20px;
+        justify-content: space-between;
+        align-items: center;
+    }
 
 #logo img {
-    width: 7%;
-    position: absolute;
-    top: 2%;
-    left: 5px;
+   height:100px;
 }
 
 #logo img:hover {
@@ -48,18 +53,20 @@ hr {
 }
 
 /* navigation bar */
-header {
-    margin-bottom: 2.5%;
-}
 
-.navbar {
-    display: flex;
-    justify-content: center;
+
+.navbar { 
+display: flex;
+    justify-content: space-around;
     flex-direction: row-reverse;
     align-items: center;
-    gap: 5%;
-    margin-top: 2%;
 }
+
+.navbar li {
+    list-style-type: none;
+    margin: 8px;
+}
+
 
 .navbar a {
     display: block;
@@ -75,22 +82,10 @@ header {
 .navbar a:hover {
     color: #598392;
     font-weight: bold;
-    
 }
 
-.navbar li {
-    list-style-type: none;
-}
 
 /*signup button */
-#signupbtn {
-    position: absolute;
-    top: 2%;
-    right: 1%;
-    width: 10%;
-    padding: 2%;
-
-}
 
 #signupbtn a {
     text-decoration: none;
@@ -101,14 +96,12 @@ header {
 }
 
 #signupbtn a:hover {
-color:#598392;
+    color: #598392;
 }
 
 #signupbtn i {
     color: #598392;
 }
-
-
 
 /* main video and overlay text*/
 #video-outer {
@@ -141,12 +134,12 @@ color:#598392;
 #background h1 {
     color: rgb(239, 246, 224);
     text-transform: uppercase;
-    font-size:5.5rem;
+    font-size: 5.5rem;
 }
 
 #background h3 {
     color: white;
-    font-family:"Space Grotesk", sans-serif;
+    font-family: "Space Grotesk", sans-serif;
 }
 
 #background a {
@@ -156,7 +149,7 @@ color:#598392;
 
 #background a:hover {
     color: #eff6e0;
-    font-size:2rem;
+    font-size: 2rem;
 }
 
 /* menu of the day section */
@@ -226,17 +219,15 @@ color:#598392;
 
 .recipes-list-item:nth-child(even) {
     flex-direction: row-reverse;
-  }
-
-
-.flexleft{
-    width:80%;
-    margin-right:20px;
 }
 
+.flexleft {
+    width: 80%;
+    margin-right: 20px;
+}
 
 .recipes-list-item img {
-    max-width:70%;
+    max-width: 70%;
     border-radius: 50%;
 }
 
@@ -251,9 +242,6 @@ color:#598392;
 #dinnerrecipes h2 {
     border-bottom: 1px solid #598392;
 }
-
-
-
 
 /* signuppage */
 
@@ -317,9 +305,8 @@ color:#598392;
 #signupbutton:hover {
     background-color: white;
     border-color: #598392;
-    color:#598392;
+    color: #598392;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
 }
 
 input[type="radio"] {
@@ -379,7 +366,6 @@ input[type="radio"] {
     align-items: flex-start;
     position: relative;
     margin-bottom: 40px;
-  
 }
 
 #hyperlinks img {
@@ -399,12 +385,11 @@ input[type="radio"] {
 
 footer {
     height: 150px;
-    margin:40px 100px;
+    margin: 40px 100px;
 }
 
 .icons {
     text-align: center;
-
 }
 
 .icons li {
@@ -414,7 +399,7 @@ footer {
 .icons i {
     font-size: 2rem;
     color: #3a3a3a;
-    padding-left:30px;
+    padding-left: 30px;
 }
 
 .icons i:hover {
@@ -423,31 +408,25 @@ footer {
 
 /* Media queries */
 
-
 /* Mobile phone screens */
 
 @media screen and (max-width: 600px) and (min-width: 320px) {
-
     p {
         text-align: justify;
     }
-    
-/* header */
+
+    /* header */
     #logo img {
-        width: 20%;
-        position: absolute;
-        top: 2%;
-        left: 2%;
-    }
+        height:100px;
+     }
 
     #background h1 {
-        font-size:3rem;
+        font-size: 3rem;
     }
 
-    #background h3{
-        font-size:1rem;
+    #background h3 {
+        font-size: 1rem;
     }
-
 
     header {
         margin-bottom: 25%;
@@ -478,18 +457,17 @@ footer {
 
     #signupbtn {
         position: absolute;
-        right:-2px;
+        right: -2px;
         width: 110px;
         padding: 2%;
         top: 25px;
-        font-size:1.2rem;
-        border:2px solid #598392;
+        font-size: 1.2rem;
+        border: 2px solid #598392;
         background-color: rgba(18, 69, 89, 0.4);
-        border-radius: 10px 0px 0px 10px ;
+        border-radius: 10px 0px 0px 10px;
     }
 
     /* menu of the day section */
-
 
     #moftheday {
         width: 80%;
@@ -512,12 +490,10 @@ footer {
         justify-content: center;
     }
 
-   
+    /* hyperlinks explore section */
 
-/* hyperlinks explore section */
-
-    #explore h2{
-        display:none;
+    #explore h2 {
+        display: none;
     }
 
     #hyperlinks {
@@ -528,9 +504,8 @@ footer {
         display: none;
     }
 
+    /* footer section */
 
-/* footer section */
-    
     footer {
         position: fixed;
         right: 0px;
@@ -541,45 +516,39 @@ footer {
         border-radius: 10px 0px 0px 10px;
         box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
         transform: translateY(-50%);
-        margin:0 auto;
+        margin: 0 auto;
     }
 
     footer hr {
-        display:none;
+        display: none;
     }
 
-.icons i{
-    color: white;
-    padding-bottom:10px;
-}
-
-.icons i:hover {
-    color:#eff6e0;
-}
-
- .icons  {
-        position:absolute;
-        right:5px;
+    .icons i {
+        color: white;
+        padding-bottom: 10px;
     }
 
- 
+    .icons i:hover {
+        color: #eff6e0;
+    }
 
-   
+    .icons {
+        position: absolute;
+        right: 5px;
+    }
 
     /* BREAKFAST, LUNCH, DINNER PAGE*/
 
     .recipes-list-item {
         flex-wrap: wrap;
         text-align: center;
-        margin:0 auto;
+        margin: 0 auto;
     }
 
-
-    .flexleft{
-        width:100%;
+    .flexleft {
+        width: 100%;
     }
 
-    
     /* About Page */
     #flexabout {
         flex-wrap: wrap;
@@ -601,8 +570,6 @@ footer {
     .aboutinfo {
         width: 90%;
         text-align: center;
-
- 
     }
 
     /* Signup page*/
@@ -621,40 +588,35 @@ footer {
         margin-left: 28%;
     }
 
-    #container{
-        padding-bottom:50px;
+    #container {
+        padding-bottom: 50px;
     }
 }
 
 /* TABLET SCREENS */
 
-@media screen and (min-width: 600px) 
-and (max-width: 1024px) {
-
+@media screen and (min-width: 600px) and (max-width: 1024px) {
     p {
         text-align: justify;
     }
 
     h1 {
         font-size: 2rem;
-            }
-        
-            h2 {
-                font-size:1.8rem;
-            }
-        
-            h3 {
-                font-size:1.5rem;
-            }
-
-/* header */
-
-    #logo img {
-        width: 20%;
-        position: absolute;
-        top: 2%;
-        left: 2%;
     }
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    /* header */
+
+   #logo img {
+   height:100px;
+}
 
     header {
         margin-bottom: 25%;
@@ -675,7 +637,7 @@ and (max-width: 1024px) {
 
     .navbar a {
         border: 2px solid #598392;
-        margin-right:70px;
+        margin-right: 70px;
     }
 
     .navbar a:hover {
@@ -686,29 +648,27 @@ and (max-width: 1024px) {
 
     #signupbtn {
         position: absolute;
-        right:-2px;
+        right: -2px;
         width: 20%;
         padding: 2%;
         top: 7%;
-        font-size:1.5rem;
-        border:2px solid #598392;
+        font-size: 1.5rem;
+        border: 2px solid #598392;
         background-color: rgba(18, 69, 89, 0.4);
-        border-radius: 10px 0px 0px 10px ;
+        border-radius: 10px 0px 0px 10px;
     }
 
-    #signupbtn:hover{
-        width:22%;
+    #signupbtn:hover {
+        width: 22%;
     }
 
-
-   /* menu of the day section */
+    /* menu of the day section */
 
     #moftheday {
         width: 80%;
         max-width: 100%;
         margin-left: 50px;
     }
-
 
     #breakfast {
         flex-wrap: wrap;
@@ -725,15 +685,14 @@ and (max-width: 1024px) {
         justify-content: center;
     }
 
-   
     /* hyperlinks explore section */
 
     #hyperlinks {
-       padding-bottom:50px;
+        padding-bottom: 50px;
     }
 
-/* footer section */
-   
+    /* footer section */
+
     footer {
         position: fixed;
         right: 0px;
@@ -744,45 +703,39 @@ and (max-width: 1024px) {
         border-radius: 10px 0px 0px 10px;
         box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
         transform: translateY(-50%);
-        margin:0 auto;
+        margin: 0 auto;
     }
 
     footer hr {
-        display:none;
+        display: none;
     }
 
-.icons i{
-    color: white;
-    padding-bottom:10px;
-}
-
-.icons i:hover {
-    color:#eff6e0;
-}
-
- .icons  {
-        position:absolute;
-        right:5px;
+    .icons i {
+        color: white;
+        padding-bottom: 10px;
     }
 
- 
+    .icons i:hover {
+        color: #eff6e0;
+    }
 
-   
+    .icons {
+        position: absolute;
+        right: 5px;
+    }
 
     /* BREAKFAST, LUNCH, DINNER PAGE*/
 
     .recipes-list-item {
         flex-wrap: wrap;
         text-align: center;
-        margin:0 auto;
+        margin: 0 auto;
     }
 
-
-    .flexleft{
-        width:100%;
+    .flexleft {
+        width: 100%;
     }
 
-    
     /* About Page */
     #flexabout {
         flex-wrap: wrap;
@@ -804,8 +757,6 @@ and (max-width: 1024px) {
     .aboutinfo {
         width: 90%;
         text-align: center;
-
- 
     }
 
     /* Signup page*/
@@ -816,14 +767,10 @@ and (max-width: 1024px) {
         position: absolute;
         left: 5%;
         top: 40%;
-  
     }
 
     #signupbutton {
         margin-top: 20px;
         margin-left: 35%;
     }
-
-
-
 }
