--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ p {
     font-family: "Space Grotesk", sans-serif;
     font-size: 1rem;
     color: #555b6e;
+    text-align: justify;
 }
 
 h1{
@@ -32,7 +33,7 @@ h2{
     font-size: 2rem;
     text-align: center;
     font-family: "IBM Plex Sans", sans-serif;
-    color: #598392;
+    color: #1e4a5c;
 }
 
 h3{
@@ -55,6 +56,7 @@ header {
         justify-content: space-between;
         align-items: center;
     }
+
 
 #logo img {
    height:100px;
@@ -89,6 +91,7 @@ display: flex;
     border-bottom: 1px solid #598392;
     font-family: "Space Grotesk", sans-serif;
     font-size: 1rem;
+    color:#1e4a5c;
 }
 
 .navbar a:hover {
@@ -105,6 +108,7 @@ display: flex;
     font-family: "Space Grotesk", sans-serif;
     font-weight: bold;
     display: block;
+    color:#1e4a5c;
 }
 
 #signupbtn a:hover {
@@ -429,6 +433,7 @@ footer {
              padding:15px 9px ;
              border-right: 1px solid #598392;
              border-bottom:none;
+             color:white;
             
          }
      
@@ -627,6 +632,7 @@ header {
     .navbar a {
         border: 2px solid #598392;
         margin-right: 70px;
+        color:white;
     }
 
     .navbar a:hover {
