add more changes to style and readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,7 @@ header {
     justify-content: space-between;
     margin: 48px auto;
     text-align: justify;
+    gap: 50px;
 }
 
 .recipes-list-item:nth-child(even) {
@@ -522,6 +523,7 @@ footer {
         text-align: center;
         margin: 0 auto;
         width: 100%;
+        gap:0;
     }
 
     .flexleft {
@@ -687,6 +689,7 @@ footer {
         flex-wrap: wrap;
         text-align: center;
         margin: 0 auto;
+        gap:0;
     }
 
     .flexleft {
