--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ header {
 }
 
 #logo img:hover {
+    /* box shadow code taken from https://getcssscan.com/css-box-shadow-examples */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
