add display none for the main video on mobile screen temporarly, until ios issue is solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,10 @@ footer {
         height: 100px;
     }
 
+    #main-video{
+        display:none;
+    }
+
     .navbar {
         justify-content: center;
         gap: 0px;
